# twitch_bot

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  env.cfg  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
mountaineer_bot/: __init__.py  api.py  core.py  entry_point.py  list.py  list_profile.py  list_redemptions.py  main.py  security.py  setup.py  twitch_auth.py  utils.py  version.py  windows_auth.py
mountaineer_bot/bots/: add_bot.py  mod_bot.py  mountaineers_bot.py  novae_bot.py  novae_bot2.py  streamer_bot.py  test_bot.py
mountaineer_bot/components/: __init__.py  count_down.py  first_identifier.py  level_adder.py  redemption.py  scheduler.py  sound_reactor.py  stream_live.py  text_command.py
mountaineer_bot/data/: env.cfg
mountaineer_bot/tw_events/: __init__.py  core.py  predictions.py  scopes.py  stream_live.py
mountaineer_bot/tw_events/types/: __init__.py  base_messages.py  core.py  messages.py
mountaineer_bot/twitch_auth/: core.py
mountaineer_bot/twitchauth/: core.py  device_flow.py
